--- a/src/sacctmgr/Makefile.in
+++ b/src/sacctmgr/Makefile.in
@@ -149,12 +149,13 @@ am_sacctmgr_OBJECTS = account_functions.$(OBJEXT) \
 	archive_functions.$(OBJEXT) association_functions.$(OBJEXT) \
 	config_functions.$(OBJEXT) cluster_functions.$(OBJEXT) \
 	common.$(OBJEXT) event_functions.$(OBJEXT) \
-	file_functions.$(OBJEXT) runaway_job_functions.$(OBJEXT) \
-	job_functions.$(OBJEXT) reservation_functions.$(OBJEXT) \
-	resource_functions.$(OBJEXT) sacctmgr.$(OBJEXT) \
-	qos_functions.$(OBJEXT) txn_functions.$(OBJEXT) \
-	user_functions.$(OBJEXT) wckey_functions.$(OBJEXT) \
-	problem_functions.$(OBJEXT) tres_function.$(OBJEXT)
+	federation_functions.$(OBJEXT) file_functions.$(OBJEXT) \
+	runaway_job_functions.$(OBJEXT) job_functions.$(OBJEXT) \
+	reservation_functions.$(OBJEXT) resource_functions.$(OBJEXT) \
+	sacctmgr.$(OBJEXT) qos_functions.$(OBJEXT) \
+	txn_functions.$(OBJEXT) user_functions.$(OBJEXT) \
+	wckey_functions.$(OBJEXT) problem_functions.$(OBJEXT) \
+	tres_function.$(OBJEXT)
 sacctmgr_OBJECTS = $(am_sacctmgr_OBJECTS)
 am__DEPENDENCIES_1 =
 sacctmgr_DEPENDENCIES = $(top_builddir)/src/db_api/libslurmdb.o \
@@ -495,8 +496,9 @@ sacctmgr_SOURCES = \
 	cluster_functions.c	\
 	common.c                \
 	event_functions.c	\
+	federation_functions.c	\
 	file_functions.c	\
-	runaway_job_functions.c\
+	runaway_job_functions.c \
 	job_functions.c		\
 	reservation_functions.c	\
 	resource_functions.c	\
@@ -609,13 +611,14 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/common.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/event_functions.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/federation_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/file_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/job_functions.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/runaway_job_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/problem_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/qos_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/reservation_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/resource_functions.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/runaway_job_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sacctmgr.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tres_function.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/txn_functions.Po@am__quote@
